removing JDK memory settings, deprecated in JDK 8